fix nav bar spacing

--- a/src/CSS/NavagationBar.css
+++ b/src/CSS/NavagationBar.css
@@ -50,6 +50,7 @@ a {
   background-color: #ffffff;
   width: 3rem;
   border-radius: 30px;
+  margin: 1rem 1rem 1rem 1rem;
 }
 @keyframes moveDown {
   from {
